--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-dinky
+title: OpenAPI Initiative Registry
+subtitle: Extensible data value repository
 collections_dir: registry
 collections:
   object:
