--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-dinky
 title: OpenAPI Initiative Registry
 description: Extensible data value repository
+show_downloads: true
 collections_dir: registry
 collections:
   object:
