--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,7 +19,7 @@ collections:
     slug: draft-feature
     name: Draft Features Registry
     output: true
-  alternative-schema-type:
+  alternative-schema:
     slug: alternative-schema
     name: Alternative Schema Type Registry
     output: true
