--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-dinky
-title: OpenAPI Initiative Registry
+title: OpenAPI Initiative Registry - DRAFT CONTENT
 description: Extensible data value repository
 show_downloads: true
 collections_dir: /registries
